# pdfgut

./: CMakeLists.txt  document.cpp  document.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  thememanager.cpp  thememanager.h
panels/: objnumtreeview.cpp  objnumtreeview.h  objtreeviewitem.cpp  objtreeviewitem.h
pdfparser/: pdfreader.cpp  pdfreader.h
view/: objview.cpp  objview.h  objview.ui  parseview.cpp  parseview.h  rawview.cpp  rawview.h
